Teaching to master (#69)
* rx-java commit

* rx-java commit

* rx-java commit

* rx-java commit

* system-design new commit

* migration form jdk 21-jdk 24

* Refactoring package

* changing lombok version for java 24 compatible version

* interview 25 brush up commit

* interview text brush up commit

* interview text brush up commit

* Cache impl commit

* altimetrik commit

* master to developer (#61)

* Teaching (#56)

* rx-java commit

* rx-java commit

* rx-java commit

* rx-java commit

* system-design new commit

* migration form jdk 21-jdk 24

* Refactoring package

* changing lombok version for java 24 compatible version

* interview 25 brush up commit

* interview text brush up commit

* interview text brush up commit

* Cache impl commit

---------

Co-authored-by: kkumari <kkumarimbbs@gmail.com>

* Teaching (#57)

* rx-java commit

* rx-java commit

* rx-java commit

* rx-java commit

* system-design new commit

* migration form jdk 21-jdk 24

* Refactoring package

* changing lombok version for java 24 compatible version

* interview 25 brush up commit

* interview text brush up commit

* interview text brush up commit

* Cache impl commit

---------

Co-authored-by: kkumari <kkumarimbbs@gmail.com>

* altimetrik commit

---------

Co-authored-by: kkumari <kkumarimbbs@gmail.com>

* altimetrik commit

* master to teaching merging (#62)

* Teaching (#56)

* rx-java commit

* rx-java commit

* rx-java commit

* rx-java commit

* system-design new commit

* migration form jdk 21-jdk 24

* Refactoring package

* changing lombok version for java 24 compatible version

* interview 25 brush up commit

* interview text brush up commit

* interview text brush up commit

* Cache impl commit

---------

Co-authored-by: kkumari <kkumarimbbs@gmail.com>

* Teaching (#57)

* rx-java commit

* rx-java commit

* rx-java commit

* rx-java commit

* system-design new commit

* migration form jdk 21-jdk 24

* Refactoring package

* changing lombok version for java 24 compat